# symphony

./: AGENTS.md
.codex/skills/jira/: SKILL.md
elixir/: README.md  WORKFLOW.md
elixir/lib/symphony_elixir/: agent.ex  agent_runner.ex  cli.ex  config.ex  orchestrator.ex  tracker.ex
elixir/lib/symphony_elixir/claude_code/: app_server.ex
elixir/lib/symphony_elixir/codex/: app_server.ex
elixir/lib/symphony_elixir/config/: schema.ex
elixir/lib/symphony_elixir/jira/: adapter.ex  client.ex
elixir/priv/claude_app_server/: README.md  pyproject.toml
elixir/priv/claude_app_server/src/claude_app_server/: __main__.py  events.py  protocol.py  session.py
elixir/priv/claude_app_server/tests/: test_events.py  test_main_loop.py  test_protocol.py  test_session.py
elixir/test/: test_helper.exs
elixir/test/symphony_elixir/: agent_dispatch_test.exs  tracker_dispatch_test.exs  workspace_and_config_test.exs
elixir/test/symphony_elixir/claude_code/: app_server_test.exs  e2e_test.exs
elixir/test/symphony_elixir/jira/: adapter_test.exs  client_test.exs
