[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "claude_app_server"
version = "0.1.0"
description = "Codex app-server protocol shim backed by claude-agent-sdk"
requires-python = ">=3.11"
dependencies = [
  "anthropic>=0.25.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-asyncio>=0.23", "anyio[trio]>=4.0"]

[project.scripts]
claude-app-server = "claude_app_server.__main__:main"

[tool.hatch.build.targets.wheel]
packages = ["src/claude_app_server"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
